=========
Changelog
=========

1.3b1 (unreleased)
==================

- Enhance support for multi-line members in secret files: order them and
  indent them automatically. (#13040)


1.2 (2016-01-29)
================

- Change default of supervisor PID file path to ensure it does something
  useful out of the box.

  It's still a good idea to place it on a temporary filesystem that is wiped
  after a reboot to ensure the PID is from a current system environment.


1.2b2 (2016-01-29)
==================

- Remove the deprecated 'remote' command alias.

- Remove implicit dependency of Supervisor to Logrotation and Nagios.

  Supervisor now has the options ``logrotate`` and ``nagios`` that can
  be enabled per environment.

  **Compatibility note:** if you update from an existing setup with supervisor
  you should add this to your environments that actually use those features::

    [component:supervisor]
    logrotate = True
    nagios = True

  Otherwise environments will complain that the RotatedLogFile and
  nagios.Service have unsatisfied resource requirements. Alternatively you
  can drop the ``logrotate`` and ``nrpehost`` or ``nagiosserver`` components
  in environments where you don't need them.

1.2b1 (2016-01-28)
==================

- Add more utilities for managing secrets: get an overview of
  all environments and what user keys are there, automatically
  add or remove users to all, one, or multiple environments.

- Improve component error reporting.

- Add '--check' flag to deploy command. This causes batou to connect only
  to the first host and report any configuration errors.

  The target will have their batou repository updated, so here's a friendly
  reminder that your deployment should not depend on the content of the
  repository directly but always only on things copied to the work environment.

- Make the '--fast' and '-F' flags more robust.

- Fix up some outdated examples (not all of them, though).
